Roman Festchook         <roma@polesye.net>              27 Oct 2001
Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Mon Mar 4 01:04:28 EET 2002 Harry Kalogirou <harkal@gmx.net>

	* TCP/IP accept bug.
	* Reduced the TIME_WAIT expire from 2mins to 30 secs.
	  This helps keep down the number of active TCP control blocks.
	* Fixed final "write config file" dialog in menuconfig.
	* Made this 0.1.0-pre4 release, since there was no actual 
	  release last time (Sun Jan 13 22:37:14).

Sun Feb 24 14:50:29 GMT 2002	Riley Williams <rhw@memalpha.cx>

	* This is ELKS 0.1.0-pre5

	* Made ELKS not rely on the Linux kernel source being present for
	  the error values, by importing the Linux 2.5.5 errno.h files
	  into the ELKS tree. Also standardised the way this header file
	  is included.

Sun Feb 24 12:01:54 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Fixed #else and #endif to not fox the bcc -ansi option.
	* Reformatted scripts/Configure in a consistent style.
	* Reformatted scripts/Menuconfig in a consistent style.

Wed Feb 20 12:27:08 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Added syscall to return kernel version string. This can be
	  omitted by using a configuration option, but only enlarges
	  the kernel by 16 bytes if included. The configuration option
	  defaults to NOT including this support. When it is disabled,
	  the kernel prints its version during system boot, but when
	  it is enabled, that no longer happens and the startup script
	  is expected to do this instead if such is required.

	  For those interested in the configuration option, it can be
	  found under "Kernel Hacking" and is easily identifiable.

Tue Feb 19 22:04:46 GMT 2002	Riley Williams <rhw@MemAlpha.cx>
