@@ -31,7 +31,13 @@ Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
 
-Mon Mar 4 01:04:28 EET 2002 Harry Kalogirou <harkal@gmx.net>
+Thu Mar 07 14:47:03 EET 2002 Harry Kalogirou <harkal@gmx.net>
+
+	* Added MSS tcp option transmition.
+	* Fixed do_fork() bug, it was leaving dummy tasks on the
+	  task table under memory shortage.
+
+Mon Mar 04 01:04:28 EET 2002 Harry Kalogirou <harkal@gmx.net>
 
 	* TCP/IP accept bug.
 	* Reduced the TIME_WAIT expire from 2mins to 30 secs.
